# phishxai

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
code_results/10-thousand-per-source/experiments/runs/2025-11-15_17-06-56/: baseline_training.yaml
code_results/10-thousand-per-source/reports/tables/: errors_dt.csv  errors_lgbm.csv  errors_rf.csv  errors_xgb.csv  feature_rankings.csv  metrics.csv
code_results/20-thousand-per-source/reports/tables/: errors_dt.csv  errors_lgbm.csv  errors_linear_svm.csv  errors_lr.csv  errors_rf.csv  metrics.csv
code_results/40-thousand-per-source/reports/tables/: errors_dt.csv  errors_lgbm.csv  feature_rankings.csv
data/code_results/10-thousand-per-source/models/: dt.joblib  lgbm.joblib  linear_svm.joblib  lr.joblib  metadata.yaml  xgb.joblib
data/code_results/20-thousand-per-source/models/: dt.joblib  lgbm.joblib  linear_svm.joblib  lr.joblib  metadata.yaml  xgb.joblib
data/code_results/40-thousand-per-source/models/: dt.joblib  lgbm.joblib  linear_svm.joblib  lr.joblib  metadata.yaml  xgb.joblib
data/raw/: truncated_10000_phishtank_verified_online.csv  truncated_10000_tranco_top_1m.csv  truncated_15000_phishtank_verified_online.csv  truncated_15000_tranco_top_1m.csv  truncated_20000_phishtank_verified_online.csv  truncated_20000_tranco_top_1m.csv  truncated_30000_tranco_top_1m.csv  truncated_40000_tranco_top_1m.csv  truncated_5000_phishtank_verified_online.csv  truncated_5000_tranco_top_1m.csv
experiments/configs/: starter.yaml  starter_20k_per_source.yaml  starter_quick.yaml
src/irp_phishxai/: config.py
src/irp_phishxai/cli/: build_dataset.py  error_analysis.py  evaluate.py  explain.py  fetch.py  train.py
src/irp_phishxai/pipelines/: p00_fetch_data.py  p01_clean_align.py  p02_features.py  p02_split.py  p03_train_baselines.py  p04_train_ensembles.py  p05_evaluate.py  p06_explain_ensembles.py  p07_error_analysis.py
src/irp_phishxai/utils/: dedup_utils.py  feature_utils.py  io_utils.py  lime_utils.py  logging_utils.py  metrics_utils.py  model_utils.py  shap_utils.py  split_utils.py  url_utils.py
(+79 files in other folders)
