[project]
name = "irp-phishxai"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel Shaibu",email = "emmagd4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tldextract (>=5.3.0,<6.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "xgboost (>=3.1.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.49.1,<0.50.0)",
    "lime (>=0.2.0.1,<0.3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.1,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)"
]

[tool.poetry]
packages = [{include = "irp_phishxai", from = "src"}]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
