[project]
name = "irp-phishxai"
version = "0.1.0"
description = "Explainable Ensemble ML System for URL-Based Phishing Detection"
authors = [
    {name = "Emmanuel Shaibu",email = "emmagd4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "pandas ==2.3.3",
    "numpy ==2.3.4",
    "scikit-learn ==1.7.2",
    "tldextract ==5.3.0",
    "pyyaml ==6.0.3",
    "joblib ==1.5.2",
    "matplotlib ==3.10.7",
    "lightgbm ==4.6.0",
    "shap ==0.50.0",
    "lime ==0.2.0.1",
    "scipy ==1.16.2",
    "python-dateutil ==2.9.0.post0",
    "xgboost ==3.1.0",
]

[dependency-groups]
dev = [
    "black ==25.9.0",
    "ruff ==0.14.1",
    "pytest ==8.4.2",
    "pandas-stubs ==2.3.2.250926"
]

[tool.poetry]
packages = [{include = "irp_phishxai", from = "src"}]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
